--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,23 +1,172 @@
-// Define project theme colors
-$hz-background : #0078cc;
-$purple: #8a4d76;
-$pink: #fa7c91;
-$brown: #757763;
-$beige-light: #d0d1cd;
-$beige-lighter: #eff0eb;
+html, body {
+    margin: 0;
+}
 
-// Path to Bulma's sass folder
-@use "bulma/sass" with (
-  $family-primary: '"Roboto", sans-serif',
-  $grey-dark: $brown,
-  $grey-light: $beige-light,
-  $primary: $hz-background,
-);
+section {
+    margin: 20px;
+}
 
-// Font Awesome
-@use '@fortawesome/fontawesome-free/css/all.css';
+body {
+    background-color: rgb(212, 212, 212);
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-// Typography. You can use any font here, but for demonstration purposes, we use some nice Google font
-// (check https://fonts.google.com/ for fonts)
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+h1, p {
+    color: black;
+    text-align: left;
+}
+
+/* nav bar*/
+nav {
+    width: 100%;
+    list-style-type: none;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
+nav a {
+    float: left;
+    display: block;
+    color: rgb(255, 254, 254);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    border-right: 5px solid rgb(0, 0, 0);
+}
+
+nav a:hover {
+    background-color: rgb(38, 0, 255);
+    color:white;
+}
+
+.active {
+    background-color: rgb(172, 252, 255);
+    color: black;
+}
+
+/*fotos*/
+.fotoVanSchoolLogo {
+    float: right;
+}
+
+#fotoVanKat {
+    width: auto;
+    height: 350px;
+}
+
+.fotoVanSchool {
+    width: auto;
+    height: 250px;
+}
+
+
+/* table */
+table, th, td {
+    border: 2px solid black;
+    border-collapse: collapse;
+    background-color: rgb(194, 253, 255);
+}
+
+
+th, td {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+/* Progress Bar */
+#myProgress {
+    width: 100%;
+    background-color: #ddd;
+}
+
+#myBar {
+    width: 1%;
+    height: 30px;
+    background-color: #98fcb4;
+    text-align: center; /* To center it horizontally (if you want) */
+    line-height: 30px; /* To center it vertically */
+    color: rgb(0, 0, 0);
+}
+
+/* blog plaatjes en klikbare link */
+.linkjes {
+    background-color: #030303;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+#blog1 {
+    width: auto;
+    height: 150px;
+    float: left;
+    margin-right: 3%;
+    margin-top: 3%;
+}
+
+#blog2 {
+    width: auto;
+    height: 150px;
+    float: left;
+    margin-top: 3%;
+    margin-left: 13%;
+}
+
+#blog3 {
+    width: auto;
+    height: 150px;
+    float: right;
+    margin-top: 3%;
+}
+
+#blog4 {
+    width: auto;
+    height: 150px;
+    float: left;
+    margin-left: 3%;
+    margin-top: 10%;
+}
+
+#blog5 {
+    width: auto;
+    height: 150px;
+    float: right;
+    margin-right: 3%;
+    margin-top: 10%;
+}
+
+/* buttons blog */
+.vorigeButton {
+    border: none;
+    color: rgb(0, 0, 0);
+    background-color: rgb(0, 255, 255);
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 16px;
+    position: fixed;
+    bottom: 100px;
+    left: 150px;
+}
+
+.volgendeButton {
+    border: none;
+    color: rgb(0, 0, 0);
+    background-color: rgb(0, 255, 64);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    position: fixed;
+    bottom: 100px;
+    right: 150px;
+    cursor: pointer;
+}
 
